--- a/program/pytest.ini
+++ b/program/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 norecursedirs = env/* venv/*
 addopts = -vv -p no:cacheprovider
-testpaths = pytest_tests/
-python_files = tests.py
+testpaths = tests/
+python_files = test_*.py
